--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+[metadata]
+license_file = LICENSE
+
 [tool:pytest]
 testpaths = astrodata recipe_system gemini_instruments geminidr/core geminidr/f2 geminidr/gmos geminidr/gsaoi gempy
 #addopts = --pyargs --doctest-modules --ignore-glob=*conf.py
